--- a/sys/lib/composer.json
+++ b/sys/lib/composer.json
@@ -6,6 +6,7 @@
         "swiftmailer/swiftmailer": "v5.4.6",
         "league/event": "2.1.2",
         "szenis/routing": "v1.1.0",
-        "filp/whoops" : "2.1.9"
+        "filp/whoops" : "2.1.9",
+        "erusev/parsedown": "^1.7"
     }
 }
